# fehaciencia

./: .env.example  .gitignore  Makefile  README.md  dev.sh  docker-compose-dev.yml  docker-compose.yml
api/: .gitignore  Dockerfile  Dockerfile_back  README.md  docker-compose.yml  pyproject.toml
api/.agents/: AGENTS.md
api/app/: check.py  config.py  guides.py  main.py  organize.py  seed.py
api/app/core/: auth.py  database.py  errors.py  models.py  serializer.py  types.py
api/app/core/utils/: __init__.py  helpers.py  thumbnails.py
api/app/modules/auth/: model.py  route.py
api/app/modules/credit_notes/: model.py  repository.py  route.py  schema.py  serializer.py  service.py
api/app/modules/delivery_notes/: model.py  repository.py  route.py  schema.py  serializer.py  service.py
api/app/modules/sales_invoices/: document_rules.py  model.py  repository.py  route.py  schema.py  serializer.py  service.py  types.py
api/app/modules/supporting_documents/: model.py  repository.py  route.py  schema.py  service.py
api/app/modules/upload/: route.py
api/app/scripts/: helpers.py
nginx/: nginx.conf
web/: Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
web/.agents/: AGENTS.md
web/src/: app.d.ts  app.html  hooks.server.ts
web/src/lib/: constants.ts  mock-invoices.ts  types.ts  utils.ts
web/src/lib/components/: delivery_note-link.svelte  document-dialog.svelte  invoice-link.svelte  multi-doc-thumbnails.svelte  (+5 more)
web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
web/static/: site.webmanifest
(+12 files in other folders)
