[project]
name = "telldocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.137.1",
  "httpx>=0.28.1",
  "opencv-python>=4.13.0.92",
  "paddleocr[all]>=3.7.0",
  "paddlepaddle>=3.3.1",
  "python-multipart",
  "sqlmodel>=0.0.39",
  "uvicorn>=0.49.0",
]
