[project]
name = "telldocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bcrypt>=5.0.0",
  "fastapi>=0.137.1",
  "opencv-python>=4.13.0.92",
  "pillow>=12.3.0",
  "pyjwt>=2.13.0",
  "python-magic>=0.4.27",
  "python-multipart",
  "sqlmodel>=0.0.39",
  "uvicorn>=0.49.0",
]
